2018-06-13  Timothy Hatcher  <timothy@apple.com>

        Input form controls have a white background in dark mode, when they should not.

        https://bugs.webkit.org/show_bug.cgi?id=186577
        rdar://problem/39258325

        Reviewed by Tim Horton.

        * fast/css/apple-system-control-colors-expected.txt: Updated.
        * fast/css/apple-system-control-colors.html: Added -apple-system-control-background.
        * platform/gtk/fast/css/apple-system-control-colors-expected.txt: Updated.

2018-06-13  John Wilander  <wilander@apple.com>

        Add console logging to test case to help investigate flaky timeouts
        https://bugs.webkit.org/show_bug.cgi?id=186603
        <rdar://problem/41096614>

        Unreviewed test gardening.

        * http/tests/resourceLoadStatistics/partitioned-and-unpartitioned-cookie-with-partitioning-timeout-expected.txt:
        * http/tests/resourceLoadStatistics/partitioned-and-unpartitioned-cookie-with-partitioning-timeout.html:
            Now has step-by-step console logging so that (hopefully) the flaky timeouts don't produce empty output.

2018-06-13  Said Abou-Hallawa  <sabouhallawa@apple.com>

        TileFirstPaint strategy for async image decoding should be disabled for non root RenderLayers
        https://bugs.webkit.org/show_bug.cgi?id=186336
        <rdar://problem/40808099>

        Reviewed by Simon Fraser.

        * fast/images/async-image-composited-show-expected.html: Added.
        * fast/images/async-image-composited-show.html: Added.

2018-06-13  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK] Mark some flaky tests and expected failures.

        Unreviewed test gardening.

        * platform/gtk/TestExpectations:

2018-06-13  Thibault Saunier  <tsaunier@igalia.com>

        [WPE] Build getUserMedia support
        https://bugs.webkit.org/show_bug.cgi?id=186547

        Reviewed by Alejandro G. Castro.
